--- a/Search-In-Moshaf/appsettings.json
+++ b/Search-In-Moshaf/appsettings.json
@@ -10,3 +10,7 @@
   },
   "AllowedHosts": "*"
 }
+/*
+  
+  Server=db4026.public.databaseasp.net; Database=db4026; User Id=db4026; Password=xJ_4D#7aj6S-; Encrypt=False; MultipleActiveResultSets=True;
+*/
