--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyConnection": "Server=(localdb)\\ProjectModels;Database=SewarDb;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    "MyConnection": "Server=db4026.public.databaseasp.net; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
